--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 </head>
 <body>
    
-    <div id="welcome"></div>
+    <div id="welcome">Hi there</div>
     <div id="hello"></div>
 
 
 </body>
 
 <script src="script.js"></script>
+<script src="prev.js"></script>
 </html>
