--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -46,20 +46,22 @@
     <p>This is a simple layout with navigation.</p>
   </header>
 
-  <section id="about">
+  <main id="section">
+     <section class="sub"  id="about">
     <h2>About</h2>
     <p>Here's a little bit about what this site is for.</p>
   </section>
 
-  <section id="services">
+  <section class="sub" id="services">
     <h2>Services</h2>
     <p>We offer helpful things, like code and charisma.</p>
   </section>
 
-  <section id="contact">
+  <section class="sub" id="contact">
     <h2>Contact</h2>
     <p>Reach out and say hi!</p>
   </section>
+  </main>
 
 </body>
 
