final DOM practice

--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -67,7 +67,12 @@
   <main id="main">
      <section class="sub"  id="about">
     <h2>About</h2>
-    <p>Here's a little bit about what this site is for.</p>
+    <p id="para">Here's a little bit about what this site is for.</p>
+      <nav>
+        <a href="#">Link</a>
+        <a href="#">Link-tex</a>
+        <a href="#">Link</a>
+      </nav>
   </section>
 
   <section class="sub" id="services">
