--- a/lesson5/index.html
+++ b/lesson5/index.html
@@ -93,10 +93,20 @@
      <section class="sub"  id="about">
     <h2>About</h2>
     <p id="para">Here's a little bit about what this site is for.</p>
-      <nav>
-        <a href="#">Link</a>
-        <a href="#">Link-tex</a>
-        <a href="#">Link</a>
+      <nav class="testing">
+        <div>
+          <p>All categories of people</p>
+          <a class='remove' href="#">X</a>
+        </div>
+        <div>
+          <p>All categories of people</p>
+          <a class='remove' href="#">X</a>
+        </div>
+        <div>
+          <p>All categories of people</p>
+          <a class='remove' href="#">X</a>
+        </div>
+        
       </nav>
   </section>
 
