callbacks and promises

--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -70,15 +70,47 @@
 
   <header id="home">
     <h1 class="" id="heading">Welcome to My Website</h1>
-    <div id="items"></div>
+    <p>This is a simple layout with navigation.</p>
+    <form action="#" method="post" id="form">
+  <!-- <label for="name">Name:</label><br> -->
+  <input type="text" id="name" name="name" placeholder="Search"><br><br>
 
-  <button id="btn" class="btn">LOAD DATA</button>
-  <button id="btn" class="btn">JSON</button>
-  <button id="btn" class="btn">JSON API</button>
+  <button id="btn" class="btn">Click Me</button>
+    </form>
+
   </header>
 
-  <div id="result"></div>
+
+
+  <main id="main">
+     <section class="sub"  id="about">
+    <h2>About</h2>
+    <p id="para">Here's a little bit about what this site is for.</p>
+  </section>
+
+  <section class="sub" id="services">
+    <h2>Services</h2>
+    <p>We offer helpful things, like code and charisma.</p>
+  </section>
+
+  <section class="sub" id="contact">
+    <h2>Contact</h2>
+    <p>Reach out and say hi!</p>
+  </section>
+  <section class="sub" id="review">
+    <h2>Reviews</h2>
+    <p>All reviews out and check out</p>
+  </section>
+  <section class="sub" id="subs">
+    <h2>Subcribers</h2>
+    <p>Subcribers and out and say hi!</p>
+  </section>
+ 
+
+
+</main>
 
 </body>
+
  <script src="app.js"></script>
 </html>
