--- a/lesson8/index.html
+++ b/lesson8/index.html
@@ -13,6 +13,11 @@
       padding: .5rem 1.5rem;
 
     }
+    #container{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
     .btn{
       padding: .5rem 1.5rem;
       background-color: orangered;
@@ -77,7 +82,11 @@
   <button id="btn3" class="btn">JSON API</button>
   </header>
 
-  <div id="result"></div>
+  <div id="container">
+    <div id="result">
+    
+  </div>
+  </div>
 
 </body>
  <script src="app.js"></script>
