--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -4,74 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Simple Website</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-    }
-    input{
-      padding: .5rem 1.5rem;
+  <link rel="stylesheet" href="style.css">
 
-    }
-    #container{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .btn{
-      padding: .5rem 1.5rem;
-      background-color: orangered;
-      color: #fff;
-      border-radius: .5rem;
-      border: none;
-      cursor: pointer;
-      
-    }
-    .btn:hover{
-      background-color: rgb(223, 60, 1);
-
-    }
-    nav {
-      background-color: #333;
-      padding: 10px;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 10px;
-      padding: 6px 10px;
-    }
-    nav a:hover {
-      background-color: #555;
-    }
-    section {
-      padding: 20px;
-    }
-    header {
-      background-color: #f4f4f4;
-      padding: 30px;
-      text-align: center;
-    }
-
-    .active{
-      font-size: larger;
-      color: orangered
-
-    }
-    .test{
-      font-weight: 700;
-      color: goldenrod;
-    }
-  </style>
 </head>
 <body>
 
-  <nav id="navigation">
+  <!-- <nav id="navigation">
     <a class="link" href="#home">Home</a>
     <a class="link" href="#about">About</a>
     <a class="link" href="#services">Services</a>
     <a class="link" href="#contact">Contact</a>
-  </nav>
+  </nav> -->
 
   <header id="home">
     <h1 class="" id="heading">Welcome to My Website</h1>
@@ -83,9 +26,22 @@
   </header>
 
   <div id="container">
-    <div id="result">
-    
-  </div>
+      <div class="wrapper">
+          <div id="result">
+            <div class="img-container">
+              <img src="sample.pngk" alt="img  here">
+            </div>
+          <div class="vital">
+            <h3>Your Name</h3>
+            <p>Job Title</p>
+          </div>
+          <div class="details">
+            <li>Employee ID  : 12345678</li>
+            <li>Issue Date   : 01/01/2050</li>
+            <li>Valid until  : 01/01/2051</li>
+          </div>
+        </div>
+    </div>
   </div>
 
 </body>
