Improved job card

--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -29,17 +29,19 @@
       <div class="wrapper">
           <div id="result">
             <div class="img-container">
-              <img src="sample.pngk" alt="img  here">
+              <img src="sample.png" alt="img  here">
             </div>
-          <div class="vital">
-            <h3>Your Name</h3>
-            <p>Job Title</p>
-          </div>
           <div class="details">
+            <div class="vital">
+              <h3>Your Name</h3>
+              <p>Job Title</p>
+          </div>
+          <div class="add-on">
+            </div>
             <li>Employee ID  : 12345678</li>
             <li>Issue Date   : 01/01/2050</li>
             <li>Valid until  : 01/01/2051</li>
-          </div>
+        </div>
         </div>
     </div>
   </div>
