--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -9,21 +9,38 @@
 </head>
 <body>
 
-  <!-- <nav id="navigation">
-    <a class="link" href="#home">Home</a>
-    <a class="link" href="#about">About</a>
-    <a class="link" href="#services">Services</a>
-    <a class="link" href="#contact">Contact</a>
-  </nav> -->
+  <header class="navigation">
+    <nav >
+      <a class="link" href="#home">Home</a>
+      <a class="link" href="#about">About</a>
+      <a class="link" href="#services">Services</a>
+      <a class="link" href="#contact">Contact</a>
+    </nav>
+    <div class="icons">
+      <div class="form-btn btn" id="form-btn">form</div>
+    </div>
+  </header>
 
-  <header id="home">
+  <div class="form-container ">
+    <div id="close-form "><span>X </span></div>
+      <form action="">
+        <h3>Employee Form</h3>
+        <span >Name</span>
+        <input type="text" class="box" placeholder="Saalu">
+        <span >Title</span>
+        <input type="text" class="box" placeholder="Engineer">
+        <input type="submit" class="btn" value="Submit">
+      </form>
+  </div>
+
+  <section class="home">
     <h1 class="" id="heading">Welcome to My Website</h1>
     <div id="items"></div>
 
   <button id="btn1" class="btn">LOAD DATA</button>
   <button id="btn2" class="btn">JSON</button>
   <button id="btn3" class="btn">JSON API</button>
-  </header>
+  </section>
 
   <div id="container">
       <div class="wrapper">
