--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -21,7 +21,7 @@
     </div>
   </header>
 
-  <div class="form-container ">
+  <div class="form-container active">
     <div id="close-form "><span>X </span></div>
       <form action="">
         <h3>Employee Form</h3>
