--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -14,15 +14,19 @@
       <a class="link" href="#home">Home</a>
       <a class="link" href="#about">About</a>
       <a class="link" href="#services">Services</a>
-      <a class="link" href="#contact">Contact</a>
+      <!-- <a class="link" href="#contact">Contact</a> -->
     </nav>
+    <form action="" class="search-form">
+      <input type="search" name="" placeholder="search here..." id="search-box">
+      <label for="search-box">Q</label>
+    </form>
     <div class="icons">
-      <div class="form-btn btn" id="form-btn">form</div>
+      <div class="form-btn btn" id="form-btn" class="form-btn">form</div>
     </div>
   </header>
 
   <div class="form-container active">
-    <div id="close-form "><span>X </span></div>
+    <div class="close-form "><span>X </span></div>
       <form action="">
         <h3>Employee Form</h3>
         <span >Name</span>
