--- a/project1/index.html
+++ b/project1/index.html
@@ -23,8 +23,26 @@
       <a class="link" href="#contact">Contact</a>
       <a class="link" href="#resume">Resume</a>
     </nav>
+    <a href="#" class="menu"><i class="fas fa-bars"></i></a>
     </div>
+
+    <!-- -------------Mobile Nav--------- -->
+    <div class="mobile-nav">
+    <a href="" class="logo"><i class="fa-brands fa-sellcast"></i></a>
+    <div class="close-menu">X</div>
+    <nav class="navbar">
+      <a class="link" href="#home">Home</a>
+      <a class="link" href="#about">About</a>
+      <a class="link" href="#services">Services</a>
+      <a class="link" href="#contact">Contact</a>
+      <a class="link" href="#resume">Resume</a>
+    </nav>
+    </div>
+
   </header>
+
+
+
   <!-- ===============Header Section END============== -->
   
   
