Project section design

--- a/project1/index.html
+++ b/project1/index.html
@@ -117,16 +117,84 @@
    <section class="projects" id="projects">
       <h1 class="heading"><span>Projects</span> </h1>
     
-      <div class="content">
-       <div class="description">Goes Here</div>
-       <div class="project-details">Goes Details</div>
+      <div class="wrap">
+        <div class="image-container">
+            <img src="./img/one.png" alt="" class="image">
+          </div>
+          <div class="description">
+          <h3 class="">Project One</h3>
+          <p class=" ">
+            A web app for visualizing personalized Spotify data. 
+            View your top artists, top tracks, recently played tracks, and 
+            detailed audio information about each track. Create and save new playlists 
+            of recommended tracks based on your existing playlists and more.
+          </p>
+          <ul class="tech-stack">
+            <li>React</li>
+            <li>Express</li>
+            <li>MongoDB</li>
+            <li>Heroku</li>
+          </ul>
+          <ul class="links">
+            <a href="#">Source code <i class="fa-brands fa-github"></i></a>
+            <a href="#">Preview <i class="fas fa-mail"></i></a>
+          </ul>
+        </div>
+      </div>
+      <div class="wrap">
+          <div class="image-container">
+            <img src="./img/two.png" alt="" class="image">
+          </div>
+          <div class="description">
+          <h3 class="">Project Two</h3>
+          <p class=" ">
+            A web app for visualizing personalized Spotify data. 
+            View your top artists, top tracks, recently played tracks, and 
+            detailed audio information about each track. Create and save new playlists 
+            of recommended tracks based on your existing playlists and more.
+          </p>
+          <ul class="tech-stack">
+            <li>React</li>
+            <li>Express</li>
+            <li>MongoDB</li>
+            <li>Heroku</li>
+          </ul>
+          <ul class="links">
+            <a href="#">Source code <i class="fa-brands fa-github"></i></a>
+            <a href="#">Preview <i class="fas fa-mail"></i></a>
+          </ul>
+        </div>
+      </div>
+      <div class="wrap">
+          <div class="image-container">
+            <img src="./img/three.png" alt="" class="image">
+          </div>
+          <div class="description">
+          <h3 class="">Project Three</h3>
+          <p class=" ">
+            A web app for visualizing personalized Spotify data. 
+            View your top artists, top tracks, recently played tracks, and 
+            detailed audio information about each track. Create and save new playlists 
+            of recommended tracks based on your existing playlists and more.
+          </p>
+          <ul class="tech-stack">
+            <li>React</li>
+            <li>Express</li>
+            <li>MongoDB</li>
+            <li>Heroku</li>
+          </ul>
+          <ul class="links">
+            <a href="#">Source code <i class="fa-brands fa-github"></i></a>
+            <a href="#">Preview <i class="fas fa-mail"></i></a>
+          </ul>
+        </div>
       </div>
    </section>
   <!-- =============== Section Project END ============== -->
   
   
   <!-- =============== Section Contact  ============== -->
-    <Footer>
+  <Footer>
     <section class="contact" id="contact">
       <h1 class="heading"><span>Contact</span> </h1>
     
@@ -155,11 +223,10 @@
       </div>
       </div>
    </section>
-  <Footer>
+  </Footer>
 
   <!-- =============== Section Contact END ============== -->
-  
-  
+
   <!-- =============== Section Footer END ============== -->
    
   <!-- =============== Section Footer END ============== -->
